# skillmap

./: .gitignore  CLAUDE.md  DESIGN.md  IMPROVEMENT_PLAN.md  README.md  pyproject.toml
diagnostics/: diagnose.py
skillmap/: __init__.py  author.py  cli.py  discover.py  enrich.py  extract.py  graph.py  scope.py
tests/: test_enrich.py  test_learn_loop.py  test_selection_quality.py  test_skillmap.py
